@@ -9,6 +9,8 @@ warnings.filterwarnings("ignore",
                         "<string>")
 warnings.filterwarnings("ignore", "the sets module is deprecated",
                         DeprecationWarning, "<string>")
+warnings.filterwarnings("ignore", ".*popen2 module is deprecated.*",
+                        DeprecationWarning)
 
 class AllTest(unittest.TestCase):
 
